# cookiecutter-python-poetry

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: labeler.yml  pull-request.yml  release.yml
docs/: index.md
docs/features/: cicd.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py  utils.py
